# Cpp-ToDoList

./: .gitignore  CMakeLists.txt  README.md  Structure.txt  run.sh  todo_app
include/: FileManager.h  Notification.h  Task.h  TaskManager.h
src/: FileManager.cpp  Task.cpp  TaskManager.cpp  main.cpp
